# ai-hub

./: .env.example  .gitignore  LICENSE  README.md  worklog.md
.github/workflows/: build-apk.yml
agent-ctx/: task1-ai-hub-implementation.md
db/: custom.db
mobile/: .gitignore  README.md
mobile/flutter_app/: analysis_options.yaml  pubspec.yaml
mobile/flutter_app/android/: build.gradle  gradle.properties  local.properties  settings.gradle
mobile/flutter_app/android/app/: build.gradle
mobile/flutter_app/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
mobile/flutter_app/ios/Runner/: Info.plist
mobile/flutter_app/lib/: main.dart
mobile/flutter_app/lib/models/: app_models.dart
mobile/flutter_app/lib/providers/: app_providers.dart
mobile/flutter_app/lib/screens/: analytics_screen.dart  chat_screen.dart  history_screen.dart  home_screen.dart  knowledge_screen.dart  (+1 more)
mobile/rust_core/: Cargo.toml
mobile/rust_core/src/: lib.rs
mobile/rust_core/src/analysis/: language.rs  mod.rs  sentiment.rs
mobile/rust_core/src/api/: chat.rs  mod.rs  models.rs  stream.rs
mobile/rust_core/src/providers/: anthropic.rs  custom.rs  google.rs  groq.rs  mod.rs  nvidia.rs  ollama.rs  openai.rs  openrouter.rs  together.rs
mobile/rust_core/src/storage/: database.rs  mod.rs
prisma/: schema.prisma
src/app/: globals.css  layout.tsx  page.tsx
src/components/: analytics-view.tsx  bottom-nav.tsx  chat-view.tsx  history-view.tsx  knowledge-view.tsx  models-view.tsx  settings-view.tsx
src/lib/: db.ts  language.ts  providers.ts  sentiment.ts  store.ts
(+19 files in other folders)
